--- a/static/mycss/my.css
+++ b/static/mycss/my.css
@@ -1,12 +1,10 @@
+/* Welcome user message */
+
 .btn-secondary {
     color: #fff;
     background-color: #b7b4b2!important;
     border-color: #c3c2c1!important;
 }
-
-
-
-
 /*form_component*/
 
 .doc_form{
