--- a/templates/includes/_dashlinks.html
+++ b/templates/includes/_dashlinks.html
@@ -15,4 +15,5 @@
 <!-- Custom styles for this template -->
 <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
 <link href="{{ url_for('static', filename='css/style-responsive.css') }}" rel="stylesheet">
+<link href="{{ url_for('static', filename='mycss/mycss.css') }}" rel="stylesheet">
 <script src="{{ url_for('static', filename='lib/chart-master/Chart.js') }}"></script>
