--- a/templates/includes/_sidebar.html
+++ b/templates/includes/_sidebar.html
@@ -3,7 +3,7 @@
       <!-- sidebar menu start-->
       <ul class="sidebar-menu" id="nav-accordion">
         <p class="centered"><a href="profile.html"><img src="img/ui-sam.jpg" class="img-circle" width="80"></a></p>
-        <h5 class="centered">Sam Soffes</h5>
+        <h5 class="centered">Jimmy Tran</h5>
         <li class="mt">
           <a class="active" href="dashboard">
             <i class="fa fa-dashboard"></i>
@@ -13,7 +13,7 @@
         <li class="sub-menu">
           <a href="behavior">
             <i class="fa fa-desktop"></i>
-            <span>Student Behaviorial</span>
+            <span>Student</span>
             </a>
         </li>
         <li class="sub-menu">
@@ -22,13 +22,10 @@
        
         </li>
         <li class="sub-menu">
-          <a href="javascript:;">
+          <a href="records">
             <i class="fa fa-th"></i>
             <span>Records</span>
             </a>
-          <ul class="sub">
-            <li><a href="basic_table.html">Student Information</a></li>
-          </ul>
         </li>
     </ul>
       <!-- sidebar menu end-->
