--- a/templates/basic_table.html
+++ b/templates/basic_table.html
@@ -198,7 +198,7 @@
       <div class="top-menu">
         <ul class="nav pull-right top-menu">
           <li>
-            <a class="logout" href="index.html">Logout</a>
+            <a class="logout" href="logout">Logout</a>
           </li>
         </ul>
       </div>
@@ -261,10 +261,7 @@
             </tr>
           </tfoot>
         </table>
-    </div>
-
-
-        
+      </div>      
     <!-- /MAIN CONTENT -->
     <!--main content end-->
     <!--footer start-->
@@ -290,23 +287,23 @@
     <!--footer end-->
   </section>
   <!-- js placed at the end of the document so the pages load faster -->
-  <script src="lib/jquery/jquery.min.js"></script>
-  <script src="lib/bootstrap/js/bootstrap.min.js"></script>
-  <script class="include" type="text/javascript" src="lib/jquery.dcjqaccordion.2.7.js"></script>
-  <script src="lib/jquery.scrollTo.min.js"></script>
-  <script src="lib/jquery.nicescroll.js" type="text/javascript"></script>
+  <script src="{{ url_for('static',filename='lib/jquery/jquery.min.js') }}"></script>
+  <script src="{{ url_for('static',filename='lib/bootstrap/js/bootstrap.min.js')}}"></script>
+  <script class="include" type="text/javascript" src="{{ url_for('static',filename='lib/jquery.dcjqaccordion.2.7.js') }}"></script>
+  <script src="{{ url_for('static',filename='lib/jquery.scrollTo.min.js') }}"></script>
+  <script src="{{ url_for('static',filename='lib/jquery.scrollTo.min.js') }}" type="text/javascript"></script>
   <!--common script for all pages-->
-  <script src="lib/common-scripts.js"></script>
+  <script src="{{ url_for('static',filename='lib/common-scripts.js') }}"></script>
   <!--script for this page-->
-  <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
+  <script type="text/javascript" src="{{ url_for('static',filename='js/jquery-3.4.1.min.js') }}"></script>
   <!-- Bootstrap tooltips -->
-  <script type="text/javascript" src="js/popper.min.js"></script>
+  <script type="text/javascript" src="{{ url_for('static',filename='js/popper.min.js') }}"></script>
   <!-- Bootstrap core JavaScript -->
-  <script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="{{ url_for('static',filename='js/bootstrap.min.js') }}"></script>
   <!-- MDB core JavaScript -->
-  <script type="text/javascript" src="js/mdb.min.js"></script>
+  <script type="text/javascript" src="{{ url_for('static',filename='js/mdb.min.js') }}"></script>
   <!-- MDBootstrap Datatables  -->
-<script type="text/javascript" src="js/addons/datatables.min.js"></script>
+<script type="text/javascript" src="{{ url_for('static',filename='js/addons/datatables.min.js') }}"></script>
   <script>
   $(document).ready(function () {
 $('#dtVerticalScrollExample').DataTable({
