--- a/templates/form_component.html
+++ b/templates/form_component.html
@@ -98,7 +98,7 @@
               </li>
               <li>
                 <a href="index.html#">
-                  <span class="photo"><img alt="avatar" src="img/ui-zac.jpg"></span>
+                  <span class="photo"><img alt="avatar" src="{{ url_for('static',filename='img/ui-zac.jpg') }}"></span>
                   <span class="subject">
                   <span class="from">Zac Snider</span>
                   <span class="time">Just now</span>
@@ -122,7 +122,7 @@
               </li>
               <li>
                 <a href="index.html#">
-                  <span class="photo"><img alt="avatar" src="img/ui-danro.jpg"></span>
+                  <span class="photo"><img alt="avatar" src="{{ url_for('static',filename='img/ui-danro.jpg') }}"></span>
                   <span class="subject">
                   <span class="from">Dan Rogers</span>
                   <span class="time">2 hrs.</span>
@@ -134,7 +134,7 @@
               </li>
               <li>
                 <a href="index.html#">
-                  <span class="photo"><img alt="avatar" src="img/ui-sherman.jpg"></span>
+                  <span class="photo"><img alt="avatar" src="{{ url_for('static',filename='img/ui-sherman.jpg') }}"></span>
                   <span class="subject">
                   <span class="from">Dj Sherman</span>
                   <span class="time">4 hrs.</span>
@@ -200,7 +200,7 @@
       </div>
       <div class="top-menu">
         <ul class="nav pull-right top-menu">
-          <li><a class="logout" href="index.html">Logout</a></li>
+          <li><a class="logout" href="logout">Logout</a></li>
         </ul>
       </div>
     </header>
@@ -228,19 +228,18 @@
         </div>
         <!-- BASIC FORM ELELEMNTS -->
         <div class="row mt">
-          <div class="col-lg-12">
+          <div class="col-xlg-12">
             <div class="form-panel">
-              <h4 class="mb"><i class="fa fa-angle-right"></i>Upload Documents</h4>
-              <form class="md-form">
+              <form class="lg-form">
                 <div class="file-field">
-                  <div class="btn btn-primary btn-sm float-left">
+                  <div class="btn btn-primary btn-lg float-left">
                     <span>Forms</span>
                     <input type="file">
-                  </div>
-                  
-                
+                  </div>               
                 </div>
               </form>
+              <h4 class="mb"><i class="fa fa-angle-right"></i>Upload Documents</h4>
+             
             </div>
           </div>
           <!-- col-lg-12-->
@@ -253,11 +252,10 @@
           <div class="col-lg-12">
             <div class="form-panel">
               <h4 class="mb"><i class="fa fa-angle-right"></i> Download Forms</h4>
-              <div class="download_form"><a href="forms/disciplinaryform.pdf" download><i class="fa fa-download" aria-hidden="true"></i> Download Discipline</a></div>
-              <div class="doc_form"><img class="img_doc" width="450px" height="550px" src="img/discipline_pic.png" alt=""></div>
-              <div class="download_form"><a href="forms/IncidentReportForm.pdf" download><i class="fa fa-download" aria-hidden="true"></i> Download Incident</a></div>
-              <div class="doc_form"><img class="img_doc" width="450px" height="550px" src="img/incident_pic.png" alt=""></div>
-
+              <div class="download_form"><a href="{{ url_for('static',filename='forms/disciplinaryform.pdf') }}" download><i class="fa fa-download" aria-hidden="true"></i> Download Discipline</a></div>
+              <div class="doc_form"><img class="img_doc" width="450px" height="550px" src="{{ url_for('static',filename='img/discipline_pic.png') }}" alt=""></div>
+              <div class="download_form"><a href="{{ url_for('static',filename='forms/IncidentReportForm.pdf') }}" download><i class="fa fa-download" aria-hidden="true"></i> Download Incident</a></div>
+              <div class="doc_form"><img class="img_doc" width="450px" height="550px" src="{{ url_for('static',filename='img/incident_pic.png') }}" alt=""></div>
             </div>
             <!-- /form-panel -->
           </div>
@@ -285,7 +283,7 @@
           -->
           Created with Dashio template by <a href="https://templatemag.com/">TemplateMag</a>
         </div>
-        <a href="form_component.html#" class="go-top">
+        <a href="forms" class="go-top">
           <i class="fa fa-angle-up"></i>
           </a>
       </div>
@@ -293,24 +291,24 @@
     <!--footer end-->
   </section>
   <!-- js placed at the end of the document so the pages load faster -->
-  <script src="lib/jquery/jquery.min.js"></script>
-  <script src="lib/bootstrap/js/bootstrap.min.js"></script>
-  <script class="include" type="text/javascript" src="lib/jquery.dcjqaccordion.2.7.js"></script>
-  <script src="lib/jquery.scrollTo.min.js"></script>
-  <script src="lib/jquery.nicescroll.js" type="text/javascript"></script>
+  <script src="{{ url_for('static',filename='lib/jquery/jquery.min.js') }}"></script>
+  <script src="{{ url_for('static',filename='lib/bootstrap/js/bootstrap.min.js') }}"></script>
+  <script class="include" type="text/javascript" src="{{ url_for('static',filename='lib/jquery.dcjqaccordion.2.7.js') }}"></script>
+  <script src="{{ url_for('static',filename='lib/jquery.scrollTo.min.js') }}"></script>
+  <script src="{{ url_for('static',filename='lib/jquery.nicescroll.js') }}" type="text/javascript"></script>
   <!--common script for all pages-->
-  <script src="lib/common-scripts.js"></script>
+  <script src="{{ url_for('static',filename='lib/common-scripts.js') }}"></script>
   <!--script for this page-->
-  <script src="lib/jquery-ui-1.9.2.custom.min.js"></script>
+  <script src="{{ url_for('static',filename='lib/jquery-ui-1.9.2.custom.min.js') }}"></script>
   <!--custom switch-->
-  <script src="lib/bootstrap-switch.js"></script>
+  <script src="{{ url_for('static',filename='lib/bootstrap-switch.js') }}"></script>
   <!--custom tagsinput-->
-  <script src="lib/jquery.tagsinput.js"></script>
+  <script src="{{ url_for('static',filename='lib/jquery.tagsinput.jsv') }}"></script>
   <!--custom checkbox & radio-->
-  <script type="text/javascript" src="lib/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
-  <script type="text/javascript" src="lib/bootstrap-daterangepicker/date.js"></script>
-  <script type="text/javascript" src="lib/bootstrap-daterangepicker/daterangepicker.js"></script>
-  <script type="text/javascript" src="lib/bootstrap-inputmask/bootstrap-inputmask.min.js"></script>
-  <script src="lib/form-component.js"></script>
+  <script type="text/javascript" src="{{ url_for('static',filename='lib/bootstrap-datepicker/js/bootstrap-datepicker.js') }}"></script>
+  <script type="text/javascript" src="{{ url_for('static',filename='lib/bootstrap-daterangepicker/date.js') }}"></script>
+  <script type="text/javascript" src="{{ url_for('static',filename='lib/bootstrap-daterangepicker/daterangepicker.js') }}"></script>
+  <script type="text/javascript" src="{{ url_for('static',filename='lib/bootstrap-inputmask/bootstrap-inputmask.min.js') }}"></script>
+  <script src="{{ url_for('static',filename='lib/form-component.js') }}"></script>
 
 {% endblock %}
