--- a/templates/general.html
+++ b/templates/general.html
@@ -98,7 +98,7 @@
               </li>
               <li>
                 <a href="index.html#">
-                  <span class="photo"><img alt="avatar" src="img/ui-zac.jpg"></span>
+                  <span class="photo"><img alt="avatar" src="{{ url_for('static',filename='img/ui-zac.jpg') }}"></span>
                   <span class="subject">
                   <span class="from">Zac Snider</span>
                   <span class="time">Just now</span>
@@ -110,7 +110,7 @@
               </li>
               <li>
                 <a href="index.html#">
-                  <span class="photo"><img alt="avatar" src="img/ui-divya.jpg"></span>
+                  <span class="photo"><img alt="avatar" src="{{ url_for('static',filename='img/ui-divya.jpg') }}"></span>
                   <span class="subject">
                   <span class="from">Divya Manian</span>
                   <span class="time">40 mins.</span>
@@ -122,7 +122,7 @@
               </li>
               <li>
                 <a href="index.html#">
-                  <span class="photo"><img alt="avatar" src="img/ui-danro.jpg"></span>
+                  <span class="photo"><img alt="avatar" src="{{ url_for('static',filename='img/ui-danro.jpg') }}"></span>
                   <span class="subject">
                   <span class="from">Dan Rogers</span>
                   <span class="time">2 hrs.</span>
@@ -200,7 +200,7 @@
       </div>
       <div class="top-menu">
         <ul class="nav pull-right top-menu">
-          <li><a class="logout" href="login.html">Logout</a></li>
+          <li><a class="logout" href="logout">Logout</a></li>
         </ul>
       </div>
     </header>
@@ -370,16 +370,16 @@
     <!--footer end-->
   </section>
   <!-- js placed at the end of the document so the pages load faster -->
-  <script src="lib/jquery/jquery.min.js"></script>
+  <script src="{{ url_for('static',filename='lib/jquery/jquery.min.js') }}"></script>
 
-  <script src="lib/bootstrap/js/bootstrap.min.js"></script>
-  <script class="include" type="text/javascript" src="lib/jquery.dcjqaccordion.2.7.js"></script>
-  <script src="lib/jquery.scrollTo.min.js"></script>
-  <script src="lib/jquery.nicescroll.js" type="text/javascript"></script>
+  <script src="{{ url_for('static',filename='lib/jquery/jquery.min.js') }}lib/bootstrap/js/bootstrap.min.js"></script>
+  <script class="include" type="text/javascript" src="{{ url_for('static',filename='lib/jquery.dcjqaccordion.2.7.js') }}"></script>
+  <script src="{{ url_for('static',filename='lib/jquery.scrollTo.min.js') }}"></script>
+  <script src="{{ url_for('static',filename='lib/jquery.nicescroll.js') }}" type="text/javascript"></script>
   <!--common script for all pages-->
-  <script src="lib/common-scripts.js"></script>
+  <script src="{{ url_for('static',filename='lib/common-scripts.js') }}"></script>
   <!--script for this page-->
-  <script type="text/javascript" src="lib/gritter/js/jquery.gritter.js"></script>
-  <script type="text/javascript" src="lib/gritter-conf.js"></script>
+  <script type="text/javascript" src="{{ url_for('static',filename='lib/jquery/jquery.min.js') }}"></script>
+  <script type="text/javascript" src="{{ url_for('static',filename='lib/gritter-conf.js') }}"></script>
 
   {% endblock %}
