--- a/templates/includes/_formcomplinks.html
+++ b/templates/includes/_formcomplinks.html
@@ -1,7 +1,19 @@
+<!-- Favicons -->
+<link href="{{ url_for('static', filename='img/favicon.png') }}" rel="icon">
+<link href="{{ url_for('static', filename='img/apple-touch-icon.png') }}" rel="apple-touch-icon">
 <!--external css-->
 <link href="{{ url_for('static', filename='lib/font-awesome/css/font-awesome.css') }}" rel="stylesheet" />
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='lib/bootstrap-datepicker/css/datepicker.css') }}" />
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='lib/bootstrap-daterangepicker/daterangepicker.css') }}" />
 
 <!-- my css -->
-<link rel="stylesheet" href="{{ url_for('static', filename='mycss/my.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='mycss/my.css') }}">  <!-- Favicons -->
+<link href="img/favicon.png" rel="icon">
+<link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+
+<!-- Bootstrap core CSS -->
+<link href="{{ url_for('static', filename='lib/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
+<!-- Custom styles for this template -->
+<link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
+<link href="{{ url_for('static', filename='css/style-responsive.css') }}" rel="stylesheet">
+
