--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta charset="utf-8">
+    <style>.welcome_message_name {
+        margin-top: 0 !important;
+        margin-bottom: 1rem !important;
+        margin-top: 1.5rem !important;
+        padding-right: 20px !important;
+        color: aliceblue;
+        font-size: 18px;
+    }</style>
     {% include 'includes/_dashlinks.html' %}
     {% include 'includes/_generallinks.html' %}
     {% include 'includes/_formcomplinks.html' %}
