sql uploads -done fetch -stillneed

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,7 +17,7 @@
     {% include 'includes/_generallinks.html' %}
     {% include 'includes/_formcomplinks.html' %}
     {% include 'includes/basictablelinks.html' %}
-<title>Document</title>
+<title>HPS</title>
 </head>
 <body>
     {% include 'includes/_sidebar.html' %}
