--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,7 +20,28 @@
 <title>HPS</title>
 </head>
 <body>
-    {% include 'includes/_sidebar.html' %}
+    <!--header start-->
+    <header class="header black-bg">
+        <div class="sidebar-toggle-box">
+          <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation"></div>
+        </div>
+        <!--logo start-->
+        <a href="dashboard" class="logo"><b>HPS<span>PORTAL</span></b></a>
+        <!--logo end-->
+    
+        </div>
+        <div class="top-menu">
+          <ul class="nav pull-right top-menu">
+            {% block content %}
+            {% if session['fullname']!=None %}
+            <li ><p class="welcome_message_name">Welcome, {{session['fullname']}}</p></li>
+            {% endif %}
+            {% endblock content %}
+            <li><a class="logout" href="logout">Logout</a></li>
+          </ul>
+        </div>
+      </header>
+      <!--header end-->
     {% block body %}
     {% endblock %}
 </body>
