--- a/static/mycss/my.css
+++ b/static/mycss/my.css
@@ -36,3 +36,75 @@ table.table a {
     border: 1px solid #ddd;
     font-size: 15px;
 }
+
+/* showdoc */
+/* display the image in the center screen */
+.center
+{
+    margin-left: auto; 
+    margin-right: auto; 
+    display: block;
+}
+
+/* form_component page*/
+.fullreport-btn {
+    text-transform: none;
+    position: absolute;
+}
+
+.btn-theme04 {
+    color: #fff;
+    background-color: #ed5565;
+    border-color: #da4453;
+    font-size: 20px;
+}
+
+
+/* dashboard - content , activity logs */
+@import url(http://fonts.googleapis.com/css?family=Open+Sans);
+/* apply a natural box layout model to all elements, but allowing components to change */
+
+.wrapper h1 {
+    font-size: 45px!important;
+    font-weight: 470!important;
+}
+.alert {
+  position: relative;
+  padding: .75rem 1.25rem;
+  margin-bottom: 1rem;
+  border: 1px solid transparent;
+  border-radius: .25rem;
+  font-size: 20px;
+}
+
+.activity-feed {
+  padding: 15px;
+}
+.activity-feed .feed-item {
+  position: relative;
+  padding-bottom: 20px;
+  padding-left: 30px;
+  border-left: 2px solid #e4e8eb;
+}
+.activity-feed .feed-item:last-child {
+  border-color: transparent;
+}
+.activity-feed .feed-item:after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: -6px;
+  width: 10px;
+  height: 10px;
+  border-radius: 6px;
+  background: #fff;
+  border: 1px solid #f37167;
+}
+.activity-feed .feed-item .date {
+  position: relative;
+  top: -5px;
+  color: #8c96a3;
+  text-transform: uppercase;
+  font-size: 30px;
+}
