--- a/templates/form_component.html
+++ b/templates/form_component.html
@@ -45,9 +45,12 @@
         <div class="col-lg-12">
           <div class="form-panel">
             <h4 class="mb"><i class="fa fa-angle-right"></i>Today's Uploaded Documents</h4>
-            <h3>IMAGE OF DOCS</h3>
+            <h3>Click docs to view</h3>
             {% if images!=None %}
             {% for img_url in images %}
+            <a href="docs/form?imageUrl={{img_url}}">
+              <button class="btn-theme04 fullreport-btn">FULL REPORT</button>
+            </a>
             <img src="{{ url_for('static', filename='docs/' + img_url) }}" height="700px" width="430px" />
             {% endfor %}
             {% endif %}
