--- a/templates/studentinfo.html
+++ b/templates/studentinfo.html
@@ -27,108 +27,49 @@
                 </ul>
                 <div class="tab-content py-4">
                     <div class="tab-pane active" id="profile">
-                        <h5 class="mb-3">{{student}}</h5>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <h6>About</h6>
-                                <p>
-                                    Web Designer, UI/UX Engineer
-                                </p>
-                                <h6>Hobbies</h6>
-                                <p>
-                                    Indie music, skiing and hiking. I love the great outdoors.
-                                </p>
-                            </div>
-                            <div class="col-md-6">
-                                <h6>Recent badges</h6>
-                                <a href="#" class="badge badge-dark badge-pill">html5</a>
-                                <a href="#" class="badge badge-dark badge-pill">react</a>
-                                <a href="#" class="badge badge-dark badge-pill">codeply</a>
-                                <a href="#" class="badge badge-dark badge-pill">angularjs</a>
-                                <a href="#" class="badge badge-dark badge-pill">css3</a>
-                                <a href="#" class="badge badge-dark badge-pill">jquery</a>
-                                <a href="#" class="badge badge-dark badge-pill">bootstrap</a>
-                                <a href="#" class="badge badge-dark badge-pill">responsive-design</a>
-                                <hr>
-                                <span class="badge badge-primary"><i class="fa fa-user"></i> 900 Followers</span>
-                                <span class="badge badge-success"><i class="fa fa-cog"></i> 43 Forks</span>
-                                <span class="badge badge-danger"><i class="fa fa-eye"></i> 245 Views</span>
-                            </div>
-                            <div class="col-md-12">
-                                <h5 class="mt-2"><span class="fa fa-clock-o ion-clock float-right"></span> Teacher's log
-                                </h5>
-                                <table class="table table-sm table-hover table-striped">
-                                    <tbody>
-                                        <tr>
-                                            <td>
-                                                <strong>Abby</strong> joined ACME Project Team in
-                                                <strong>`Collaboration`</strong>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                <strong>Gary</strong> deleted My Board1 in
-                                                <strong>`Discussions`</strong>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                <strong>Kensington</strong> deleted MyBoard3 in
-                                                <strong>`Discussions`</strong>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                <strong>John</strong> deleted My Board1 in
-                                                <strong>`Discussions`</strong>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                <strong>Skell</strong> deleted his post Look at Why this is.. in
-                                                <strong>`Discussions`</strong>
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                        <!--/row-->
+                        <h2 class="mb-3">{{student}}</h2>
                     </div>
                     <div class="tab-pane" id="messages">
-                        <div class="alert alert-info alert-dismissable">
-                            <a class="panel-close close" data-dismiss="alert">×</a> This is an <strong>.alert</strong>.
-                            Use this to show important messages to the user.
-                        </div>
                         <table class="table table-hover table-striped">
                             <tbody>
                                 <tr>
                                     <td>
-                                        <span class="float-right font-weight-bold">3 hrs ago</span> Parent information:
+                                        <span class="float-right font-weight-bold">{{student_info[1]}}</span> Parent 1:
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
-                                        <span class="float-right font-weight-bold">Yesterday</span> There has been a
-                                        request on your account since that was..
+                                        <span class="float-right font-weight-bold">{{student_info[2]}}</span> Parent 2:
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
-                                        <span class="float-right font-weight-bold">9/10</span> Porttitor vitae ultrices
-                                        quis, dapibus id dolor. Morbi venenatis lacinia rhoncus.
+                                        <span class="float-right font-weight-bold">{{student_info[3]}}</span> Phone:
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
-                                        <span class="float-right font-weight-bold">9/4</span> Vestibulum tincidunt
-                                        ullamcorper eros eget luctus.
+                                        <span class="float-right font-weight-bold">{{student_info[4]}}</span>Parent Income:
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
-                                        <span class="float-right font-weight-bold">9/4</span> Maxamillion ais the fix
-                                        for tibulum tincidunt ullamcorper eros.
+                                        <span class="float-right font-weight-bold">{{student_info[5]}}</span> At Risk:
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <span class="float-right font-weight-bold">{{student_info[6]}}</span> Special Ed:
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <span class="float-right font-weight-bold">{{student_info[7]}}</span> Reading Levels:
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <span class="float-right font-weight-bold">{{student_info[8]}}</span> Transportation:
                                     </td>
                                 </tr>
                             </tbody>
@@ -171,8 +112,7 @@
                             <div class="form-group row">
                                 <label class="col-lg-3 col-form-label form-control-label"></label>
                                 <div class="col-lg-9">
-                                    <input type="reset" class="btn btn-secondary" value="Cancel">
-                                    <input type="submit" class="btn btn-primary" value="Save Changes">
+                                    <input type="submit" class="btn btn-primary" value="Update Grades">
                                 </div>
                             </div>
                         </form>
