removed unused p2 -need autho -need logs

--- a/static/mycss/my.css
+++ b/static/mycss/my.css
@@ -23,6 +23,10 @@
     background-color: #efefef!important;
 }
 
+.dwlnd {
+  font-size: 15px!important;
+}
+
 
 /* basic_table - font size increase */
 
