--- a/templates/form_component.html
+++ b/templates/form_component.html
@@ -85,12 +85,12 @@
         <div class="col-lg-12">
           <div class="form-panel">
             <h4 class="mb"><i class="fa fa-angle-right"></i> Download Forms</h4>
-            <div class="download_form"><a href="{{ url_for('static',filename='forms/disciplinaryform.pdf') }}"
-                download><i class="fa fa-download" aria-hidden="true"></i> Download Discipline</a></div>
+            <div class="download_form"><a class="dwlnd" href="{{ url_for('static',filename='forms/disciplinaryform.pdf') }}"
+                download><i class="fa fa-download " aria-hidden="true"></i> Download Discipline</a></div>
             <div class="doc_form"><img class="img_doc" width="450px" height="550px"
                 src="{{ url_for('static',filename='img/discipline_pic.png') }}" alt=""></div>
-            <div class="download_form"><a href="{{ url_for('static',filename='forms/IncidentReportForm.pdf') }}"
-                download><i class="fa fa-download" aria-hidden="true"></i> Download Incident</a></div>
+            <div class="download_form"><a class="dwlnd" href="{{ url_for('static',filename='forms/IncidentReportForm.pdf') }}"
+                download><i class="fa fa-download " aria-hidden="true"></i> Download Incident</a></div>
             <div class="doc_form"><img class="img_doc" width="450px" height="550px"
                 src="{{ url_for('static',filename='img/incident_pic.png') }}" alt=""></div>
           </div>
