--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <!--external css-->
-    <link href="{{ url_for('static', filename='lib/font-awesome/css/font-awesome.css') }}" rel="stylesheet" />
-    <link href="{{ url_for('static', filename='lib/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">    <link href="{{ url_for('static', filename='lib/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='backupcs/bootstrap.min.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='backupcs/addons/datatables.min.css') }}" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="{{ url_for('static', filename='mycss/my.css') }}" rel="stylesheet">
     <style>.welcome_message_name {
         margin-top: 0 !important;
@@ -15,7 +15,13 @@
         padding-right: 20px !important;
         color: aliceblue;
         font-size: 18px;
-    }</style>
+    } 
+    .nav>li>a {
+    position: relative;
+    display: block;
+    padding: 10px 15px;
+    }
+    </style>
 <title>HPS</title>
 </head>
 <body>
