added test log in

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,8 +32,8 @@
         {% endif %}
         {% endblock content %}
         <div class="nav-item">
-        <input class="form-control mr-sm-2" type="text" name="username" placeholder="Username">
-        <input type="password" name="password" class="form-control mr-sm-2" placeholder="Password">
+        <input class="form-control mr-sm-2" type="text" name="username" placeholder="email: testing@gmail.com">
+        <input type="password" name="password" class="form-control mr-sm-2" placeholder="pass: testing">
         <button class="btn btn-secondary" type="submit">Log in</button>
         </div>
       </form>
