image ONLY prompt for forms

--- a/templates/form_component.html
+++ b/templates/form_component.html
@@ -65,7 +65,7 @@
             <form enctype="multipart/form-data" method="POST" action="upload" class="lg-form">
               <div class="file-field">
                 <div class="btn btn-primary btn-lg float-left">
-                  <span>Forms</span>
+                  <span><b>Forms(IMAGE files ONLY .jpg .png .jepg .tiff)</b></span>
                   <input type="file" name="filetoupload">
                   <button class="submit-file-btn">Submit file</button>
                 </div>
