--- a/templates/index.html
+++ b/templates/index.html
@@ -17,25 +17,22 @@
 <!-- Full Page Image Header with Vertically Centered Content -->
 
 <body>
-  <nav class="navbar-fixed-top navbar navbar-expand-lg navbar-light bg-light ">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <img width="" height="40px" src="{{ url_for('static',filename='img/haverhillogo.jpeg') }}" alt="">
     <a class="navbar-brand" href="#">HPS</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="navbar-collapse" id="">
-      <ul class="navbar-nav mr-auto">
-      </ul>
-      <!-- Will return the validateform() function as true or false depending on login -->
-      <form action="login" method="POST" name="loginform" class="form-inline my-2 my-lg-0">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <form class="form-inline my-2 my-lg-0" action="login" method="POST" name="loginform">
         {% block content %}
         {% if error %}
         <span class="errormsg_span" style="color:red">{{ message }}</span>
         {% endif %}
         {% endblock content %}
-        <div class="nav-item">
         <input class="form-control mr-sm-2" type="text" name="username" placeholder="email: testing@gmail.com">
-        <input type="password" name="password" class="form-control mr-sm-2" placeholder="pass: testing">
+        <input type="password" name="password" class="form-control mr-sm-2" placeholder="pw:testing">
         <button class="btn btn-secondary" type="submit">Log in</button>
-        </div>
       </form>
     </div>
   </nav>
@@ -49,6 +46,9 @@
       </div>
     </div>
   </header>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 
 </html>
