--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -40,7 +40,7 @@
   <!--main content start-->
   <section id="main-content">
     <section class="wrapper">
-      <div class="">
+      <div>
         <h1>Activity logs: </h1>
         <div class="activity-feed">
           {% for data in activity_log %}
