--- a/static/css/style.css
+++ b/static/css/style.css
@@ -46,6 +46,19 @@ a, a:hover, a:focus {
     width: 100%;
     height: 100%;
 }
+/* style for basic_table for iphone screens */
+@media only screen and (max-device-width: 480px) {
+    /* styles for mobile browsers smaller than 480px; (iPhone) */
+    #container_table {
+        width: 120%;
+        height: 100%;
+        padding-left: 100px;
+    }
+    .base{
+        background-color: white;
+    }
+}
+
 
 /* Bootstrap Modifications */
 .modal-header {
