--- a/templates/basic_table.html
+++ b/templates/basic_table.html
@@ -35,12 +35,10 @@
     <!-- sidebar menu end-->
   </div>
 </aside>
-<section id="container">
+<section id="container_table">
   <br><br><br><br><br><br><br>
   <div class="container">
     <h1>Student Grades</h1>
-  </div>
-  <div class="container">
     <table id="dtVerticalScrollExample" class="table table-striped table-bordered table-sm" cellspacing="0"
       width="100%">
       <thead>
@@ -82,8 +80,8 @@
   <!-- /MAIN CONTENT -->
   <!--main content end-->
   <!--footer start-->
-  <footer class="site-footer">
-  </footer>
+  <!-- <footer class="site-footer"> -->
+  <!-- </footer> -->
   <!--footer end-->
 </section>
 <!-- js placed at the end of the document so the pages load faster -->
