--- a/templates/general.html
+++ b/templates/general.html
@@ -1,126 +1,236 @@
-{% extends 'layout.html' %}
+<!DOCTYPE html>
+<html lang="en">
 
-{% block body %}
-<aside>
-  <div id="sidebar" class="nav-collapse ">
-    <!-- sidebar menu start-->
-    <ul class="sidebar-menu" id="nav-accordion">
-      <p class="centered"><a href="profile.html"><img src="img/ui-sam.jpg" class="img-circle" width="80"></a></p>
-      {% if session['fullname']!=None %}
-      <h5 class="centered">{{session['fullname']}}</h5>
-      {% endif %}
-      <li class="mt">
-        <a href="dashboard">
-          <i class="fa fa-dashboard"></i>
-          <span>Dashboard</span>
-        </a>
-      </li>
-      <li class="sub-menu">
-        <a class="active" href="behavior">
-          <i class="fa fa-desktop"></i>
-          <span>Student</span>
-        </a>
-      </li>
-      <li class="sub-menu">
-        <a href="forms"><span><i class="fa fa-tasks"></i></span>Form</a>
-      </li>
+<head>
+  <!--external css-->
+  <link rel="stylesheet" href="{{ url_for('static',filename='css/prioritytable.css') }}">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="{{ url_for('static', filename='lib/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
+  <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
+  <link href="{{ url_for('static', filename='backupcs/bootstrap.min.css') }}" rel="stylesheet">
+  <link href="{{ url_for('static', filename='backupcs/addons/datatables.min.css') }}" rel="stylesheet">
+  <link href="{{ url_for('static', filename='mycss/my.css') }}" rel="stylesheet">
+  <style>
+    .welcome_message_name {
+      margin-top: 0 !important;
+      margin-bottom: 1rem !important;
+      margin-top: 1.5rem !important;
+      padding-right: 20px !important;
+      color: aliceblue;
+      font-size: 18px;
+    }
 
-      </li>
-      <li class="sub-menu">
-        <a href="records">
-          <i class="fa fa-th"></i>
-          <span>Records</span>
-        </a>
-      </li>
-    </ul>
-    <!-- sidebar menu end-->
-  </div>
-</aside>
-<section id="container">
-  <section id="main-content">
-    <section class="wrapper">
-      <div class="row mt">
-        <div class="col-lg-6 col-md-6 col-sm-12">
-          <!--  BASIC PROGRESS BARS -->
-          <div class="showback">
-            <h1>Student Progress Graphs</h1>
-            <form action="fetchGrades" method="GET">
-              <div class="active-cyan-3 active-cyan-4 mb-4">
-                <input class="form-control" name="student_id" value="" type="text" placeholder="Search For student with ID" aria-label="Search">
-              </div>
-              <button class="btn btn-primary">LOAD</button>
-            </form>
-          </div>
-          <!--/showback -->
-          <!-- /showback -->
-          <!--  GRITTER NOTICES -->
-          {% if searched %}
-          <div class="showback">
-            <h2>{{info_hash['Name']}}</h2>
-            <div class="progress">
-              <div class="progress-bar progress-bar-{{info_hash['English'][1]}}" role="progressbar" aria-valuenow="40" aria-valuemin="0"
-                aria-valuemax="100" style="width:40%">
-                {{info_hash['English'][0]}}% ENGLISH
-              </div>
-            </div>
+    .nav>li>a {
+      position: relative;
+      display: block;
+      padding: 10px 15px;
+    }
 
-            <div class="progress">
-              <div class="progress-bar progress-bar-{{info_hash['Science'][1]}}" role="progressbar" aria-valuenow="50" aria-valuemin="0"
-                aria-valuemax="100" style="width:50%">
-                {{info_hash['Science'][0]}}% SCIENCE
-              </div>
-            </div>
+    .persp1 {
+      height: 90%;
+    }
 
-            <div class="progress">
-              <div class="progress-bar progress-bar-{{info_hash['Math'][1]}}" role="progressbar" aria-valuenow="60" aria-valuemin="0"
-                aria-valuemax="100" style="width:60%">
-                {{info_hash['Math'][0]}}% MATH 
-              </div>
-            </div>
+    .persp2 {
+      height: 90%;
+    }
 
-            <div class="progress">
-              <div class="progress-bar progress-bar-{{info_hash['History'][1]}}" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-                aria-valuemax="100" style="width:70%">
-                {{info_hash['History'][0]}}% HISTORY
-              </div>
-            </div>
-          </div>
-          {% endif %}
-          <!-- /showback -->
-        </div>
-          <!-- /showback -->
-        </div>
-        <!-- /col-lg-6 -->
-      </div>
-      <!--/ row -->
-    </section>
-    <!-- /wrapper -->
-  </section>
-  <!-- /MAIN CONTENT -->
-  <!--main content end-->
-  <!--footer start-->
-  <footer class="site-footer">
-    <div class="text-center">
+    .persp3 {
+      height: 90%;
+    }
 
-      <a href="general.html#" class="go-top">
-        <i class="fa fa-angle-up"></i>
-      </a>
+    .persp4 {
+      height: 90%;
+    }
+
+    .persp5 {
+      height: 17%;
+    }
+  </style>
+  <title>HPS</title>
+</head>
+
+<body>
+  <!--header start-->
+  <header class="header black-bg">
+    <!--logo start-->
+    <a href="dashboard" class="logo"><b>HPS<span>PORTAL</span></b></a>
+    <!--logo end-->
+
     </div>
-  </footer>
-  <!--footer end-->
-</section>
-<!-- js placed at the end of the document so the pages load faster -->
-<script src="{{ url_for('static',filename='lib/jquery/jquery.min.js') }}"></script>
+    <div class="top-menu">
+      <ul class="nav pull-right top-menu">
+        {% block content %}
+        {% if session['fullname']!=None %}
+        <li>
+          <p class="welcome_message_name">Welcome, {{session['fullname']}}</p>
+        </li>
+        {% endif %}
+        {% endblock content %}
+        <li><a class="logout" href="logout">Logout</a></li>
+      </ul>
+    </div>
+  </header>
+  <!--header end-->
+  <aside>
+    <div id="sidebar" class="nav-collapse ">
+      <!-- sidebar menu start-->
+      <ul class="sidebar-menu" id="nav-accordion">
+        <p class="centered"><a href="profile.html"><img src="img/ui-sam.jpg" class="img-circle" width="80"></a></p>
+        {% if session['fullname']!=None %}
+        <h5 class="centered">{{session['fullname']}}</h5>
+        {% endif %}
+        <li class="mt">
+          <a href="dashboard">
+            <i class="fa fa-dashboard"></i>
+            <span>Dashboard</span>
+          </a>
+        </li>
+        <li class="sub-menu">
+          <a class="active" href="behavior">
+            <i class="fa fa-desktop"></i>
+            <span>Student</span>
+          </a>
+        </li>
+        <li class="sub-menu">
+          <a href="forms"><span><i class="fa fa-tasks"></i></span>Form</a>
+        </li>
 
-<script src="{{ url_for('static',filename='lib/jquery/jquery.min.js') }}lib/bootstrap/js/bootstrap.min.js"></script>
-<script class="include" type="text/javascript"
-  src="{{ url_for('static',filename='lib/jquery.dcjqaccordion.2.7.js') }}"></script>
-<script src="{{ url_for('static',filename='lib/jquery.scrollTo.min.js') }}"></script>
-<script src="{{ url_for('static',filename='lib/jquery.nicescroll.js') }}" type="text/javascript"></script>
-<!--common script for all pages-->
-<script src="{{ url_for('static',filename='lib/common-scripts.js') }}"></script>
-<!--script for this page-->
-<script type="text/javascript" src="{{ url_for('static',filename='lib/jquery/jquery.min.js') }}"></script>
-<script type="text/javascript" src="{{ url_for('static',filename='lib/gritter-conf.js') }}"></script>
+        </li>
+        <li class="sub-menu">
+          <a href="records">
+            <i class="fa fa-th"></i>
+            <span>Records</span>
+          </a>
+        </li>
+      </ul>
+      <!-- sidebar menu end-->
+    </div>
+  </aside>
+  <section id="container">
+    <section id="main-content">
+      <section class="wrapper">
+        <div class="row mt">
+          <div class="col-lg-6 col-md-6 col-sm-12">
+            <!--  BASIC PROGRESS BARS -->
+            <div class="showback">
+              <h1>Student Progress Graphs</h1>
+              <form action="fetchGrades" method="GET">
+                <div class="active-cyan-3 active-cyan-4 mb-4">
+                  <input class="form-control" name="student_id" value="" type="text"
+                    placeholder="Search For student with ID" aria-label="Search">
+                </div>
+                <button class="btn btn-primary">LOAD</button>
+              </form>
+            </div>
+            <!--/showback -->
+            <!-- /showback -->
+            <!--  GRITTER NOTICES -->
+            {% if searched %}
+            <div class="showback">
+              <h2>{{info_hash['Name']}}</h2>
+              <div class="progress">
+                <div class="progress-bar progress-bar-{{info_hash['English'][1]}}" role="progressbar" aria-valuenow="40"
+                  aria-valuemin="0" aria-valuemax="100" style="width:40%">
+                  {{info_hash['English'][0]}}% ENGLISH
+                </div>
+              </div>
+              <div class="progress">
+                <div class="progress-bar progress-bar-{{info_hash['Science'][1]}}" role="progressbar" aria-valuenow="50"
+                  aria-valuemin="0" aria-valuemax="100" style="width:50%">
+                  {{info_hash['Science'][0]}}% SCIENCE
+                </div>
+              </div>
+              <div class="progress">
+                <div class="progress-bar progress-bar-{{info_hash['Math'][1]}}" role="progressbar" aria-valuenow="60"
+                  aria-valuemin="0" aria-valuemax="100" style="width:60%">
+                  {{info_hash['Math'][0]}}% MATH
+                </div>
+              </div>
+              <div class="progress">
+                <div class="progress-bar progress-bar-{{info_hash['History'][1]}}" role="progressbar" aria-valuenow="70"
+                  aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                  {{info_hash['History'][0]}}% HISTORY
+                </div>
+              </div>
+            </div>
+            <div class="full">
+              <h1 class="">
+                Student Hour Prriority
+              </h1>
+              <div class="container">
+                <div class="bars">
+                  <div class="persp5">
+                    <figure class="face front"></figure>
+                    <div class="face data-y">11.7</div>
+                  </div>
+                  <div class="persp4">
+                    <figure class="face front"></figure>
+                    <div class="face data-y">150</div>
+                  </div>
+                  <div class="persp3">
+                    <figure class="face front"></figure>
+                    <div class="face data-y">170</div>
+                  </div>
 
-{% endblock %}
+                  <div class="persp2">
+                    <figure class="face front"></figure>
+                    <div class="face data-y">555</div>
+                  </div>
+
+                  <div class="persp1">
+                    <figure class="face front"></figure>
+                    <div class="face data-y">901</div>
+                  </div>
+                </div>
+
+                <div class="base"></div>
+              </div>
+              <div class="subtitle">
+                <ul class="list-social">
+                  <li class="fb">Math</li>
+                  <li class="twt">English</li>
+                  <li class="gp">Science</li>
+                  <li class="lkd">Social Studies</li>
+                  <li class="pin">Free Time</li>
+                </ul>
+              </div>
+
+              <!-- /showback -->
+            </div>
+            {% endif %}
+            <!-- /showback -->
+          </div>
+          <!-- /col-lg-6 -->
+        </div>
+        <!--/ row -->
+      </section>
+      <!-- /wrapper -->
+    </section>
+    <!-- /MAIN CONTENT -->
+    <!--main content end-->
+    <!--footer start-->
+    <footer class="site-footer">
+      <div class="text-center">
+        <a href="general.html#" class="go-top">
+          <i class="fa fa-angle-up"></i>
+        </a>
+      </div>
+    </footer>
+    <!--footer end-->
+  </section>
+  <!-- js placed at the end of the document so the pages load faster -->
+  <script src="{{ url_for('static',filename='lib/jquery/jquery.min.js') }}"></script>
+
+  <script src="{{ url_for('static',filename='lib/jquery/jquery.min.js') }}lib/bootstrap/js/bootstrap.min.js"></script>
+  <script class="include" type="text/javascript"
+    src="{{ url_for('static',filename='lib/jquery.dcjqaccordion.2.7.js') }}"></script>
+  <script src="{{ url_for('static',filename='lib/jquery.scrollTo.min.js') }}"></script>
+  <script src="{{ url_for('static',filename='lib/jquery.nicescroll.js') }}" type="text/javascript"></script>
+  <!--common script for all pages-->
+  <script src="{{ url_for('static',filename='lib/common-scripts.js') }}"></script>
+  <!--script for this page-->
+  <script type="text/javascript" src="{{ url_for('static',filename='lib/jquery/jquery.min.js') }}"></script>
+  <script type="text/javascript" src="{{ url_for('static',filename='lib/gritter-conf.js') }}"></script>
+</body>
+
+</html>
